--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "repository": "",
   "license": "MIT",
   "author": "",
+  "private": true,
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -26,8 +27,17 @@
     "test:ember-compatibility": "ember try:each"
   },
   "dependencies": {
+    "@googlemaps/markerclustererplus": "^1.2.0",
+    "@sandydoo/tracked-maps-and-sets": "^2.2.2",
+    "broccoli-funnel": "^3.0.8",
+    "broccoli-merge-trees": "^4.2.0",
+    "ember-auto-import": "^1.11.2",
     "ember-cli-babel": "^7.26.3",
-    "ember-cli-htmlbars": "^5.7.1"
+    "ember-cli-htmlbars": "^5.7.1",
+    "ember-google-maps": "^4.1.0"
+  },
+  "peerDependencies": {
+    "ember-google-maps": "^4.1.0"
   },
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
@@ -37,7 +47,6 @@
     "@glimmer/tracking": "^1.0.4",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-auto-import": "^1.11.2",
     "ember-cli": "~3.26.1",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-inject-live-reload": "^2.0.2",
