--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,7 +61,7 @@ jobs:
   test-compatibility:
     name: "Scenario Tests: ${{ matrix.scenario }} | optional: ${{ matrix.allow-failure }}"
     runs-on: ubuntu-latest
-    needs: [test, test-build, test-no-lock]
+    needs: [test, test-no-lock]
     continue-on-error: ${{ matrix.allow-failure }}
     strategy:
       fail-fast: false
