--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "test:ember-compatibility": "ember try:each"
   },
   "dependencies": {
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.14.5",
     "@googlemaps/markerclustererplus": "^1.2.0",
     "@sandydoo/tracked-maps-and-sets": "^2.2.2",
     "broccoli-funnel": "^3.0.8",
