--- a/package.json
+++ b/package.json
@@ -44,8 +44,7 @@
     "broccoli-merge-trees": "^4.2.0",
     "ember-auto-import": "^2.2.2",
     "ember-cli-babel": "^7.26.3",
-    "ember-cli-htmlbars": "^5.7.1",
-    "ember-google-maps": "^4.2.1"
+    "ember-cli-htmlbars": "^5.7.1"
   },
   "peerDependencies": {
     "ember-google-maps": ">=4.2.1"
@@ -66,6 +65,7 @@
     "ember-cli-terser": "^4.0.1",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.1",
+    "ember-google-maps": "^4.2.1",
     "ember-load-initializers": "^2.1.2",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-page-title": "^6.2.1",
