--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "broccoli-merge-trees": "^4.2.0",
     "ember-auto-import": "^2.2.2",
     "ember-cli-babel": "^7.26.3",
-    "ember-cli-htmlbars": "^5.7.1"
+    "ember-cli-htmlbars": "^5.7.1",
+    "ember-google-maps-addon": "sandydoo/ember-google-maps-addon"
   },
   "peerDependencies": {
     "ember-google-maps": ">=4.2.1"
@@ -97,6 +98,7 @@
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
+    "before": "ember-google-maps",
     "versionCompatibility": {
       "ember": ">=3.16.0"
     },
